--- a/style.css
+++ b/style.css
@@ -34,8 +34,12 @@ b{
     font-weight: 700;
 }
 
-@media (max-width: 500px) { 
+@media (max-width: 992px) { 
     .progress{
         width:100% !important;
+    }
+    
+    .mb-underlg-2{
+        margin-bottom: 1rem !important;
     }
 }
