--- a/data/css/style.css
+++ b/data/css/style.css
@@ -56,7 +56,11 @@ b{
     color: #B20D3B;
     font-weight: 700;
     text-decoration: none;
+}
 
+.result::first-letter{
+    font-weight: 700;
+    color: #B20D3B;
 }
 
 
